# wswitcher

./: Cargo.toml  a.txt  abc.cache  build.rs  default.nix  flake.nix  loaders.cache  pixbufmodfile.nix
src/: backends.rs  dirmodel.rs  factory.rs  filter.rs  grid.rs  list.rs  main.rs  style.css  utils.rs  window.rs
src/resources/: resources.gresource.xml  window.ui
