[package]
name = "wswicher"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_5", "v1_6"] }
gdk-pixbuf = "0.20.7"
gtk = { version = "0.9.5", package = "gtk4", features = ["blueprint", "v4_16"] }

gtk4-layer-shell = "0.4.0"
gtk4-sys = "0.9.5"
libc = "0.2.169"
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
glib-build-tools = "0.20.0"
